--- a/T_1/style.css
+++ b/T_1/style.css
@@ -478,3 +478,31 @@ input[type="color"] {
 .form-buttons {
     text-align: center;
 }
+
+/* lab 6 */
+
+/* Стилізація SVG елементів */
+.svg-shape {
+    fill: red;
+    stroke: darkred;
+    stroke-width: 2;
+}
+
+.axes line {
+    stroke: #333;
+    stroke-width: 2;
+}
+
+.curved-text {
+    font-size: 24px;
+    font-weight: bold;
+    fill: #0056b3;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+/* Стилізація вбудованих фреймів */
+.embed-frame {
+    border: 2px solid #0056b3;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
